bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: type mismatch;
 found   : String("a")
 required: Char
var mess: Char = "a"
                 ^BDR:5: error: type mismatch;
 found   : String
 required: Char
    mess = litMessage()
                     ^BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (mess = 'R') {
           ^BDR:13: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = 'L') {
                ^BDR:18: error: type mismatch;
 found   : String("I")
 required: Char
  else if (mess = "I") {
                  ^BDR:18: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "I") {
                ^BDR:24: error: type mismatch;
 found   : String("A")
 required: Char
  else if (mess = "A") {
                  ^BDR:24: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "A") {
                ^BDR:28: error: type mismatch;
 found   : String("B")
 required: Char
  else if (mess = "B") {
                  ^BDR:28: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "B") {
                ^BDR:33: error: type mismatch;
 found   : String("C")
 required: Char
  else if (mess = "C") {
                  ^BDR:33: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "C") {
                ^BDR:39: error: type mismatch;
 found   : String("Z")
 required: Char
  else if (mess = "Z") {
                  ^BDR:39: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "Z") {
                ^BDR:43: error: type mismatch;
 found   : String("Y")
 required: Char
  else if (mess = "Y") {
                  ^BDR:43: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "Y") {
                ^BDR:48: error: type mismatch;
 found   : String("X")
 required: Char
  else if (mess = "X") {
                  ^BDR:48: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "X") {
                ^